@@ -1,0 +1,2 @@
+W:  5: map/filter on lambda could be replaced by comprehension
+W:  7: map/filter on lambda could be replaced by comprehension
